[package]
name = "calamine-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = { version = "0.18.0", features = ["dates"] }
chrono = "0.4.19"
serde = { version = "1.0.137", features = ["derive"] }
